# web_rev_action

./: .env.example  .gitattributes  .gitignore  BUILDER_SMOKE_CHECKLIST.md  GPT_ACTION_PROMPT.md  GPT_INSTRUCTIONS.sha256  INSTALL.md  PANDORA_REPRODUCTION.md  PLAN.md  README.md  REFACTORING_PLAN.md  SKILL_DRIVEN_ACTION_REFACTORING_PLAN.md  pull_project.py  pyproject.toml
.github/workflows/: validate-dual-cdp.yml  validate-skill-contracts.yml
data/analysis-workspace/reports/: toolchain-validation.md
evals/: skill_queries.jsonl
src/skill_temple/: __init__.py  app.py  browser_adapters.py  browser_models.py  browser_routes.py  browser_service.py  builder_preflight.py  content_hash.py  contract_builder.py  dead_code_audit.py  evals.py  evidence_name_rules.py  prompt_builder.py  protocol_evidence.py  replay_presets.py  runtime.py  runtime_coordinator.py  telemetry.py  workspace_models.py  workspace_routes.py  workspace_service.py  workspace_text_ops.py
src/skill_temple/browser/: __init__.py  artifacts.py  contracts.py  core.py  dispatcher.py  registry.py  replay_runtime.js  replay_runtime.py  session_states.py  steps.py  stream_state.py  transport.py
src/skill_temple/browser/adapters/: __init__.py  command.py  contracts.py  js_reverse.py  mcp.py  playwright.py
src/skill_temple/browser/operations/: __init__.py  _support.py  capture.py  context.py  evidence.py  finalization.py  inspection.py  replay.py  replay_analysis.py  session.py
src/skill_temple/example_skills/browser-action-protocol/: SKILL.md
src/skill_temple/example_skills/browser-action-protocol/docs/: error-recovery.md  json-encoding.md  operation-index.md  transport-envelope.md
src/skill_temple/example_skills/browser-evidence-inspection/: SKILL.md
src/skill_temple/example_skills/browser-evidence-inspection/docs/: evidence-gaps.md  evidence-selection.md  fact-inference-boundary.md
src/skill_temple/example_skills/browser-experiment-recovery/: SKILL.md
src/skill_temple/example_skills/browser-experiment-recovery/docs/: busy-and-stale.md  (+3 more)
src/skill_temple/example_skills/browser-request-replay/: SKILL.md
src/skill_temple/example_skills/browser-script-tracing/: SKILL.md
src/skill_temple/example_skills/browser-session-capture/: SKILL.md
src/skill_temple/example_skills/browser-stream-diagnostics/: SKILL.md
src/skill_temple/example_skills/current-site-analysis/: SKILL.md
src/skill_temple/example_skills/idapython/: SKILL.md
src/skill_temple/example_skills/pandora-protocol-reproduction/: SKILL.md
src/skill_temple/protocol/: __init__.py  fingerprints.py  matching.py  mutations.py  shapes.py  values.py
src/skill_temple/protocol/analyzers/: __init__.py  differences.py  response.py
tests/: README.md  test_browser_actions.py  test_builder_preflight.py  test_current_site_inventory.py  test_dead_code_audit.py  test_gpt_action_prompt.py  test_operation_registry.py  test_pandora_reference.py  test_protocol_evidence.py  test_runtime.py  test_skill_contracts.py  test_stage_e_boundaries.py  test_stage_f_boundaries.py  test_telemetry.py  test_workspace_actions.py
tests/browser/: common.py  test_adapter_contracts.py  test_adapter_validation.py  test_capture.py  test_contracts.py  test_finalization.py  test_inspection.py  test_replay_comparison.py  test_replay_execution.py  test_replay_extractors.py  test_replay_readers.py  test_sessions.py  test_steps.py  test_transport_envelope.py  test_transports.py
tests/evidence/: test_network_observations.py  test_stream_association.py  test_stream_start_validation.py  test_streams.py
tests/fakes/: browser.py  scenarios.py
tests/fixtures/toolchain_validation/: app.js  index.html
tests/protocol/: common.py  test_analyzer_contract.py  test_evidence.py  test_matching.py  test_mutations.py  test_response_analyzers.py
tests/runtime/: replay_runtime.test.js  test_replay_runtime.py
tests/smoke/: test_synthetic_fixture.py  test_toolchain_launch.py
tests/workspace/: common.py  test_inspect.py  test_powershell.py  test_runtime_guards.py  test_search.py  test_write.py
tools/: __init__.py  browser_action_smoke.py  current_site_inventory.py  dead_code_audit.py  toolchain_validation.py  toolchain_validation_server.py
validation/dual-cdp/: README.md  requirements.txt  run_validation.py
(+40 files in other folders)
