[project]
name = "skill-temple"
version = "0.3.0"
description = "GPT Action gateway for atomic browser protocol experiments and Skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "skill-temple contributors" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "mcp>=1.20,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[project.scripts]
skill-temple = "skill_temple.app:main"
web-rev-action = "skill_temple.app:main"
skill-temple-eval = "skill_temple.evals:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skill_temple = [
    "example_skills/*/*.md",
    "example_skills/*/docs/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
