[project]
name = "skill-temple"
version = "0.5.0"
description = "GPT Action gateway for atomic browser protocol experiments and Skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "skill-temple contributors" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "mcp>=1.20,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[project.scripts]
skill-temple = "skill_temple.app:main"
web-rev-action = "skill_temple.app:main"
skill-temple-eval = "skill_temple.evals:main"
skill-temple-build-prompt = "skill_temple.prompt_builder:main"
skill-temple-build-contracts = "skill_temple.contract_builder:main"
skill-temple-telemetry-report = "skill_temple.telemetry:main"
skill-temple-dead-code-audit = "skill_temple.dead_code_audit:main"
skill-temple-builder-preflight = "skill_temple.builder_preflight:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skill_temple = [
    "browser/*.js",
    "example_skills/*/*.md",
    "example_skills/*/docs/*.md",
    "example_skills/*/docs/*.json",
    "example_skills/*/docs/run/*.md",
    "example_skills/*/docs/inspect/*.md",
    "example_skills/*/docs/generated/*.json",
    "example_skills/*/docs/generated/run/*.json",
    "example_skills/*/docs/generated/inspect/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
